2009-05-31  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.11

2009-05-30  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added experimental drawing of cell boundaries in the GUI.

2009-05-29  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed lookup of list properties so that multiple list properties
	involving the same symbol all get scanned (in progress).

	* Centralised handling of commutativity properties to make them
	more robust and uniform. 

2009-05-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Removed auto-deletion of list properties because this messes up
	constructions of the type

	        {a,b}::AntiCommuting.
	        {a,c}::AntiCommuting.

	('a' gets taken out of the first list in that case).

2009-05-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made @vary work on isolated non-product terms in a sum too.

	* Fixed an @unwrap bug which would eliminate accents acting on
	sums.

2009-05-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a problem with derivatives not inheriting
	CommutingBehaviour correctly.

	* Removed 'type=grassmann' in Indices, in favour of a more
	flexible use of AntiCommuting on indices.

2009-04-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Cleaned up 'can_swap' and fixed handling of ImplicitIndex
	objects there.

2009-04-14  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added handling of Grassmann derivatives in @prodrule.

	* Added 'type=grassmann' to the Indices property.

	* Fixed a bug in the pattern matcher which would match 'a' to
	'b^a' under some rare circumstances.

2009-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made LaTeX errors pop up in a scrollable dialog.

	* Fixed a display bug leading to superfluous brackets for e.g. "cos(a+b)".

2009-03-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed handling of brackets in @expand_powers.

	* Fixed segfault in @expand_powers.

2009-03-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>
